Modify JAVA_OPTS by removing ZGC and ZUncommit
Removed ZGC and ZUncommit options from JAVA_OPTS.